tests/errors/dimension_02.f90
program main
    integer :: linelen = 2
    character, dimension(linelen) :: line
end program